--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ crash.log
 **/.terraform/
 **/*.tfstate
 **/*.tfstate.*
+
+# Додаємо правила для Terraform
+echo ".terraform/" >> .gitignore
+echo "*.tfstate" >> .gitignore
+echo "*.tfstate.backup" >> .gitignore
+echo ".terraform.lock.hcl" >> .gitignore
